# chess_features

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chess_features.yml  develop_features.ipynb  pyproject.toml
src/: board.py  chess_features.py  my_transform.py  neighborhood_transform.py  square.py  stockfish_features.py
src/chess_features/: __init__.py  chess_features.py  extractor_factory.py  extractors.py  neighborhood_transform.py  stockfish_features.py  transformer.py
test/: __init__.py  test_neighborhood_transform.py  test_stockfish_features.py  test_transform.py
test/test_files/: expected_binary_bitboard.txt  expected_bit_attack_map.txt  expected_bit_defend_map.txt  expected_chess_neighborhood.txt  expected_fen.txt  expected_layered_bitboard.txt  expected_san.txt  expected_unified_bitboard.txt  expected_valued_attack_map.txt  expected_valued_bitboard.txt  expected_valued_defend_map.txt  expected_valued_vector.txt  fisher.pgn  game.pgn
