[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chess_features"
authors = [{name = "Joel Ewig", email = "joel@familie-ewig.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
keywords = ["chess", "encoding", "features"]
dependencies = ["chess>=1.0.0"]