[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chess_features"
authors = [{name = "Joel Ewig", email = "joel@familie-ewig.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
keywords = ["chess", "encoding", "features"]
dependencies = ["chess>=1.0.0"]

[tool.pytest.ini_options]
pythonpath = [ "." ]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D", "T201", "S101", "S311", "COM812", "ISC001", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{test,docs,tools}/*" = ["E402", "INP001", "S307", "PLR2004", "ANN201"]